# RAG-Notebook-Studio

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
RAG_System/: rag_demo.ipynb
templates/: index.html
