[project]
name = "rag-notebook-studio"
version = "0.1.0"
description = "Notebook-first RAG system using LangChain, FAISS, HuggingFace embeddings, and Groq LLMs."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docx2txt>=0.9",
    "faiss-cpu>=1.7.4",
    "flask>=3.0.0",
    "ipykernel>=7.2.0",
    "ir>=0.0.6",
    "jq>=1.11.0",
    "langchain>=1.2.10",
    "langchain-classic>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-core>=0.1.0",
    "langchain-experimental>=0.0.65",
    "langchain-groq>=0.1.0",
    "langchain-huggingface>=0.1.0",
    "langchain-text-splitters>=0.0.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pymupdf>=1.27.1",
    "pypdf>=4.0.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.0.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=2.2.0",
    "unstructured[docx,xlsx]>=0.21.2",
]
